<resources>
    <string name="app_name" translatable="false">Runner</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="register">Create an account</string>
    <string name="already_registered">Already registered</string>
    <string name="login">Login</string>
    <string name="start">Start</string>
    <string name="logout">Logout</string>
    <string name="run">Run</string>
    <string name="run_list">Run List</string>

    <string name="distance">Distance: %1$.2f m</string>
    <string name="avg_speed">Avg speed: %1$.1f km/h</string>
    <string name="begin">Start: %1$s</string>
    <string name="end">End: %1$s</string>
    <string name="duration">Duration: %1$s</string>
    <string name="timer">%1$d:%2$s:%3$s</string>
    <string name="notifications_denied">Notification access denied</string>
    <string name="permission_required">Permission required. Open settings and allow %1$s.</string>
    <string name="to_settings">To Settings</string>
    <string name="location_denied">Location access denied</string>
    <string name="current_run">Current run</string>
    <string name="send_notifications">send notifications</string>
    <string name="fine_location_access">fine location access</string>
    <string name="run_name">New name</string>
    <string name="password">Password</string>

    <string name="field_not_filled">Field is empty</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="user_not_found">User not found</string>
    <string name="wrong_password">Wrong password</string>
    <string name="email_already_in_use">E-mail already in use</string>
    <string name="weak_password">Weak password</string>
    <string name="settings_problem">Settings problem</string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="finish">Finish</string>
    <string name="no_points_available">No available points in the route</string>
    <string name="rename_title">Rename \"%1$s\"?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name_not_set">Name not set</string>
    <string name="hours_unit">h </string>
    <string name="minutes_unit">m </string>
    <string name="seconds_unit">s</string>
    <string name="new_run">New run</string>
    <string name="run_detail">Run details</string>
    <string name="registration">Registration</string>
    <string name="log_in">Log in</string>
    <string name="date">Date</string>
    <string name="follow">Follow</string>
    <string name="send">Send</string>
    <string name="send_feedback">Leave a review</string>
    <string name="comment">Comment (optional)</string>
</resources>